# get-and-process-data-massela

./: README.md  controler_download.ipynb  data processing.ipynb  pyproject.toml
get_and_process_data_massela/: main.py
get_and_process_data_massela/Utils/: utils.py
get_and_process_data_massela/config/: secrets.yml
get_and_process_data_massela/files/: Alunos.xls
get_and_process_data_massela/integration_sheets/: integration.py
get_and_process_data_massela/process_files/: Process_files.py  process_files.py
get_and_process_data_massela/webscraping/: __init__.py  app_sis_run.py  config_selenium.py
